--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -1,28 +1,7 @@
 /* HeroesComponent's private CSS styles */
-.heroes {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
-}
-
-.container {
-  width: 100%;
-  margin: 0 auto;
-  padding-top:50px;
-}
-
-@media (min-width: 950px){
-  .container{
-    width: 50%;
-  }
-}
-
-.form-element {
-  width: 50%;
+table td {
   padding: 10px;
 }
-
 input {
   display: block;
   width: 100%;
@@ -30,16 +9,30 @@ input {
   margin: 1rem 0;
   box-sizing: border-box;
 }
-
+.container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 50px 10px 10px 10px;
+}
+.form-element {
+  width: 100%;
+}
+.mat-column-description {
+  width: 50%;
+}
+.heroes {
+  margin: 0 0 2em 0;
+  list-style-type: none;
+  padding: 0;
+  width: 15em;
+}
 .heroes li {
   position: relative;
   cursor: pointer;
 }
-
 .heroes li:hover {
   left: .1em;
 }
-
 .heroes a {
   color: #333;
   text-decoration: none;
@@ -51,17 +44,14 @@ input {
   display: block;
   width: 100%;
 }
-
 .heroes a:hover {
   color: #2c3a41;
   background-color: #e6e6e6;
 }
-
 .heroes a:active {
   background-color: #525252;
   color: #fafafa;
 }
-
 .heroes .badge {
   display: inline-block;
   font-size: small;
@@ -78,29 +68,43 @@ input {
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
-
 .delete{
   cursor: pointer;
 }
 .delete:hover{
   color:red;
 }
-
 .add-button {
  padding: .5rem 1.5rem;
  font-size: 1rem;
  margin-bottom: 2rem;
 }
-
 .add-button:hover {
   color:#525252;
   background-color: #e8e8e8;
 }
-
-table td {
-  padding: 10px;
+@media (min-width: 950px){
+  .container{
+    width: 50%;
+  }
+  .form-element {
+    width: 50%;
+    padding: 10px;
+  }
 }
 
+
+@media only screen and (max-width: 600px) {
+  .list {
+    overflow-x: auto;
+  }
+  .list td {
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+      max-width: 200px;
+  }
+}
 
 
 /*
@@ -109,6 +113,4 @@ Use of this source code is governed by an MIT-style license that
 can be found in the LICENSE file at https://angular.io/license
 */
 
-.mat-column-description {
-  width: 50%;
-}
+
