--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -48,58 +48,59 @@
 
 <!-- hero table -->
 <h2>List of heroes</h2>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> ID </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-  </ng-container>
+<div class="list">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-  </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="surname">
-    <th mat-header-cell *matHeaderCellDef> surname </th>
-    <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
-  </ng-container>
+    <ng-container matColumnDef="surname">
+      <th mat-header-cell *matHeaderCellDef> surname </th>
+      <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="age">
-    <th mat-header-cell *matHeaderCellDef>age </th>
-    <td mat-cell *matCellDef="let element"> {{element.age}} </td>
-  </ng-container>
+    <ng-container matColumnDef="age">
+      <th mat-header-cell *matHeaderCellDef>age </th>
+      <td mat-cell *matCellDef="let element"> {{element.age}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="birthDate">
-    <th mat-header-cell *matHeaderCellDef>birth date </th>
-    <td mat-cell *matCellDef="let element"> {{element.birthDate}} </td>
-  </ng-container>
+    <ng-container matColumnDef="birthDate">
+      <th mat-header-cell *matHeaderCellDef>birth date </th>
+      <td mat-cell *matCellDef="let element"> {{element.birthDate}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="voted">
-    <th mat-header-cell *matHeaderCellDef>voted </th>
-    <td mat-cell *matCellDef="let element"> {{element.voted}} </td>
-  </ng-container>
+    <ng-container matColumnDef="voted">
+      <th mat-header-cell *matHeaderCellDef>voted </th>
+      <td mat-cell *matCellDef="let element"> {{element.voted}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="isGood">
-    <th mat-header-cell *matHeaderCellDef>isGood </th>
-    <td mat-cell *matCellDef="let element"> {{element.isGood ? 'Yes' : 'No'}} </td>
-  </ng-container>
+    <ng-container matColumnDef="isGood">
+      <th mat-header-cell *matHeaderCellDef>isGood </th>
+      <td mat-cell *matCellDef="let element"> {{element.isGood ? 'Yes' : 'No'}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef>description </th>
-    <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-  </ng-container>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef>description </th>
+      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="delete">
-    <th mat-header-cell *matHeaderCellDef> </th>
-    <td mat-cell *matCellDef="let element"> 
-       <mat-icon class="delete" (click)="delete(element)">close</mat-icon>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef> </th>
+      <td mat-cell *matCellDef="let element"> 
+        <mat-icon class="delete" (click)="delete(element)">close</mat-icon>
+      </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
 
 <button class="add-button" (click)="generateJson()">Save list as JSON</button>
 
