--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -49,11 +49,22 @@
 <!-- hero table -->
 <h2>List of heroes</h2>
 <div class="list">
-  <mat-form-field class="filter">
-    <mat-label>Search by name, surname, age and description</mat-label>
-    <input matInput (keyup)="addFilter($event)" placeholder="Search" #input>
-  </mat-form-field>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <div class="filters-container">
+    <mat-form-field class="filter">
+      <mat-label>Search heroes</mat-label>
+      <input matInput (keyup)="addNameFilter($event)" placeholder="Search" #input>
+    </mat-form-field>
+  
+    <!-- <mat-form-field>
+      <mat-select (filteredReturn)="onChange()">
+        <mat-option *ngFor="let good of goodList" [value]="good.value">
+          {{good.value}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field> -->
+
+  </div>
+  <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> ID </th>
       <td mat-cell *matCellDef="let element"> {{element.id}} </td>
@@ -85,7 +96,7 @@
     </ng-container>
 
     <ng-container matColumnDef="isGood">
-      <th mat-header-cell *matHeaderCellDef>isGood </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>isGood </th>
       <td mat-cell *matCellDef="let element"> {{element.isGood ? 'Yes' : 'No'}} </td>
     </ng-container>
 
