--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -47,24 +47,21 @@
 </div>
 
 <!-- hero table -->
-<h2>List of heroes</h2>
-<div class="list">
-  <div class="filters-container">
-    <mat-form-field class="filter">
-      <mat-label>Search heroes</mat-label>
-      <input matInput (keyup)="addNameFilter($event)" placeholder="Search" #input>
-    </mat-form-field>
-  
-    <!-- <mat-form-field>
-      <mat-select (filteredReturn)="onChange()">
-        <mat-option *ngFor="let good of goodList" [value]="good.value">
-          {{good.value}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field> -->
 
-  </div>
-  <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="list">
+  <h2>List of heroes</h2>
+  <mat-form-field class="filter">
+    <mat-label>Search heroes</mat-label>
+    <input matInput (keyup)="addNameFilter($event)" placeholder="Search" #input>
+  </mat-form-field>
+  <!-- <mat-form-field>
+    <mat-select (filteredReturn)="onChange()">
+      <mat-option *ngFor="let good of goodList" [value]="good.value">
+        {{good.value}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field> -->
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> ID </th>
       <td mat-cell *matCellDef="let element"> {{element.id}} </td>
