--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -93,7 +93,7 @@
     </ng-container>
 
     <ng-container matColumnDef="isGood">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>isGood </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>is hero good? </th>
       <td mat-cell *matCellDef="let element"> {{element.isGood ? 'Yes' : 'No'}} </td>
     </ng-container>
 
